--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "env-cmd": "^10.1.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-playground": "^1.0.6",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-source-contentful": "^2.3.56",
     "gatsby-source-filesystem": "^2.9.0",
@@ -28,6 +29,7 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
