--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
